# fylax

./: README.md  meson.build
fixture/: 20240604153225.md  20240604153301.md  20240604153443.md  20240624115933.md  20240624115943.md  formating.md
resources/: application.glade  find.glade  meson.build  read_checkbox.glade  read_container.glade  read_heading.glade  read_metadata.glade  read_paragraph.glade  resources.xml  settings.glade  widget_loading.glade
src/: app_win.vala  cells.c  cells.vala  center.vala  config_file.vala  document.vala  find.vala  frontmatter.c  frontmatter.vala  fylax.vala  history.vala  query_view.vala  read.vala  scanner.vala  settings.vala  syntax2.c  syntax2.vala  tree_sitter.c  tree_sitter.h  widget_loading.vala
src/tree-sitter-markdown-inline/: parser.c
